deploy: 35ca7f56383606a5cc8b150d8d8ad516144a6930

--- a/genindex.html
+++ b/genindex.html
@@ -34,41 +34,88 @@
 <div class="genindex-jumpbox">
  <a href="#A"><strong>A</strong></a>
  | <a href="#B"><strong>B</strong></a>
- | <a href="#E"><strong>E</strong></a>
+ | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
+ | <a href="#G"><strong>G</strong></a>
  | <a href="#J"><strong>J</strong></a>
  | <a href="#K"><strong>K</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#Q"><strong>Q</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
+ | <a href="#T"><strong>T</strong></a>
  | <a href="#V"><strong>V</strong></a>
+ | <a href="#W"><strong>W</strong></a>
  
 </div>
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pykg2tbl.html#pykg2tbl.service.QueryResult.as_csv">as_csv() (pykg2tbl.service.QueryResult method)</a>
+      <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult.as_csv">as_csv() (pykg2tbl.query.QueryResult method)</a>
+
+      <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResultFromListDict.as_csv">(pykg2tbl.query.QueryResultFromListDict method)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.build">build() (pykg2tbl.kg2tbl.KGSource static method)</a>
+
+      <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult.build">(pykg2tbl.query.QueryResult static method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="pykg2tbl.j2.html#pykg2tbl.j2.jinja_sparql_builder.J2SparqlBuilder.build_sparql_query">build_sparql_query() (pykg2tbl.j2.jinja_sparql_builder.J2SparqlBuilder method)</a>
 
       <ul>
-        <li><a href="pykg2tbl.html#pykg2tbl.service.SparqlBuilder.build_sparql_query">(pykg2tbl.service.SparqlBuilder method)</a>
+        <li><a href="pykg2tbl.html#pykg2tbl.query.SparqlBuilder.build_sparql_query">(pykg2tbl.query.SparqlBuilder method)</a>
 </li>
       </ul></li>
   </ul></td>
 </tr></table>
 
-<h2 id="E">E</h2>
+<h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pykg2tbl.html#pykg2tbl.service.KG2TblService.exec">exec() (pykg2tbl.service.KG2TblService method)</a>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KG2EndpointSource.check_compatibility">check_compatibility() (pykg2tbl.kg2tbl.KG2EndpointSource static method)</a>
+
+      <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGFileSource.check_compatibility">(pykg2tbl.kg2tbl.KGFileSource static method)</a>
+</li>
+        <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResultFromListDict.check_compatibility">(pykg2tbl.query.QueryResultFromListDict static method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.exceptions.CompatibilityCheckerNotCallable">CompatibilityCheckerNotCallable</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.detect_single_source_type">detect_single_source_type() (in module pykg2tbl.kg2tbl)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.detect_source_type">detect_source_type() (pykg2tbl.kg2tbl.KGSource static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.generator_of_source_types">generator_of_source_types() (in module pykg2tbl.kg2tbl)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -84,15 +131,13 @@
 <h2 id="K">K</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pykg2tbl.html#pykg2tbl.service.KG2EndpointSource">KG2EndpointSource (class in pykg2tbl.service)</a>
-</li>
-      <li><a href="pykg2tbl.html#pykg2tbl.service.KG2TblService">KG2TblService (class in pykg2tbl.service)</a>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KG2EndpointSource">KG2EndpointSource (class in pykg2tbl.kg2tbl)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pykg2tbl.html#pykg2tbl.service.KGFileSource">KGFileSource (class in pykg2tbl.service)</a>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGFileSource">KGFileSource (class in pykg2tbl.kg2tbl)</a>
 </li>
-      <li><a href="pykg2tbl.html#pykg2tbl.service.KGSource">KGSource (class in pykg2tbl.service)</a>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource">KGSource (class in pykg2tbl.kg2tbl)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -106,13 +151,33 @@
       <ul>
         <li><a href="pykg2tbl.html#module-0">pykg2tbl</a>, <a href="pykg2tbl.html#module-pykg2tbl">[1]</a>
 </li>
+        <li><a href="pykg2tbl.html#module-pykg2tbl.exceptions">pykg2tbl.exceptions</a>
+</li>
         <li><a href="pykg2tbl.j2.html#module-pykg2tbl.j2">pykg2tbl.j2</a>
 </li>
         <li><a href="pykg2tbl.j2.html#module-pykg2tbl.j2.jinja_sparql_builder">pykg2tbl.j2.jinja_sparql_builder</a>
 </li>
-        <li><a href="pykg2tbl.html#module-pykg2tbl.service">pykg2tbl.service</a>
+        <li><a href="pykg2tbl.html#module-pykg2tbl.kg2tbl">pykg2tbl.kg2tbl</a>
+</li>
+        <li><a href="pykg2tbl.html#module-pykg2tbl.query">pykg2tbl.query</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.exceptions.MultipleSourceTypes">MultipleSourceTypes</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.exceptions.NoCompatibilityChecker">NoCompatibilityChecker</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.exceptions.NotASubClass">NotASubClass</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -124,6 +189,13 @@
 
       <ul>
         <li><a href="pykg2tbl.html#module-0">module</a>, <a href="pykg2tbl.html#module-pykg2tbl">[1]</a>
+</li>
+      </ul></li>
+      <li>
+    pykg2tbl.exceptions
+
+      <ul>
+        <li><a href="pykg2tbl.html#module-pykg2tbl.exceptions">module</a>
 </li>
       </ul></li>
       <li>
@@ -143,10 +215,17 @@
 </li>
       </ul></li>
       <li>
-    pykg2tbl.service
+    pykg2tbl.kg2tbl
 
       <ul>
-        <li><a href="pykg2tbl.html#module-pykg2tbl.service">module</a>
+        <li><a href="pykg2tbl.html#module-pykg2tbl.kg2tbl">module</a>
+</li>
+      </ul></li>
+      <li>
+    pykg2tbl.query
+
+      <ul>
+        <li><a href="pykg2tbl.html#module-pykg2tbl.query">module</a>
 </li>
       </ul></li>
   </ul></td>
@@ -155,17 +234,27 @@
 <h2 id="Q">Q</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pykg2tbl.html#pykg2tbl.service.KG2EndpointSource.query">query() (pykg2tbl.service.KG2EndpointSource method)</a>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KG2EndpointSource.query">query() (pykg2tbl.kg2tbl.KG2EndpointSource method)</a>
 
       <ul>
-        <li><a href="pykg2tbl.html#pykg2tbl.service.KGFileSource.query">(pykg2tbl.service.KGFileSource method)</a>
+        <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGFileSource.query">(pykg2tbl.kg2tbl.KGFileSource method)</a>
 </li>
-        <li><a href="pykg2tbl.html#pykg2tbl.service.KGSource.query">(pykg2tbl.service.KGSource method)</a>
+        <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.query">(pykg2tbl.kg2tbl.KGSource method)</a>
+</li>
+      </ul></li>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KG2EndpointSource.query_result_to_list_dicts">query_result_to_list_dicts() (pykg2tbl.kg2tbl.KG2EndpointSource static method)</a>
+
+      <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGFileSource.query_result_to_list_dicts">(pykg2tbl.kg2tbl.KGFileSource static method)</a>
+</li>
+        <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.query_result_to_list_dicts">(pykg2tbl.kg2tbl.KGSource method)</a>
 </li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pykg2tbl.html#pykg2tbl.service.QueryResult">QueryResult (class in pykg2tbl.service)</a>
+      <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult">QueryResult (class in pykg2tbl.query)</a>
+</li>
+      <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResultFromListDict">QueryResultFromListDict (class in pykg2tbl.query)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -173,10 +262,18 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pykg2tbl.html#pykg2tbl.service.KG2EndpointSource.reslist_to_dict">reslist_to_dict() (pykg2tbl.service.KG2EndpointSource static method)</a>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.register">register() (pykg2tbl.kg2tbl.KGSource static method)</a>
 
       <ul>
-        <li><a href="pykg2tbl.html#pykg2tbl.service.KGFileSource.reslist_to_dict">(pykg2tbl.service.KGFileSource static method)</a>
+        <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult.register">(pykg2tbl.query.QueryResult static method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.registry">registry (pykg2tbl.kg2tbl.KGSource attribute)</a>
+
+      <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult.registry">(pykg2tbl.query.QueryResult attribute)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -185,8 +282,34 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pykg2tbl.html#pykg2tbl.service.SparqlBuilder">SparqlBuilder (class in pykg2tbl.service)</a>
+      <li><a href="pykg2tbl.html#pykg2tbl.query.SparqlBuilder">SparqlBuilder (class in pykg2tbl.query)</a>
 </li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult.to_dataframe">to_dataframe() (pykg2tbl.query.QueryResult method)</a>
+
+      <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResultFromListDict.to_dataframe">(pykg2tbl.query.QueryResultFromListDict method)</a>
+</li>
+      </ul></li>
+      <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult.to_dict">to_dict() (pykg2tbl.query.QueryResult method)</a>
+
+      <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResultFromListDict.to_dict">(pykg2tbl.query.QueryResultFromListDict method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult.to_list">to_list() (pykg2tbl.query.QueryResult method)</a>
+
+      <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResultFromListDict.to_list">(pykg2tbl.query.QueryResultFromListDict method)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -196,9 +319,17 @@
       <li><a href="pykg2tbl.j2.html#pykg2tbl.j2.jinja_sparql_builder.J2SparqlBuilder.variables_in_query">variables_in_query() (pykg2tbl.j2.jinja_sparql_builder.J2SparqlBuilder method)</a>
 
       <ul>
-        <li><a href="pykg2tbl.html#pykg2tbl.service.SparqlBuilder.variables_in_query">(pykg2tbl.service.SparqlBuilder method)</a>
+        <li><a href="pykg2tbl.html#pykg2tbl.query.SparqlBuilder.variables_in_query">(pykg2tbl.query.SparqlBuilder method)</a>
 </li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="W">W</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.exceptions.WrongInputFormat">WrongInputFormat</a>
+</li>
   </ul></td>
 </tr></table>
 
