deploy: 2bf141d324f0b91256d6dea6abe0fc04abad2960

--- a/genindex.html
+++ b/genindex.html
@@ -58,6 +58,8 @@
       <ul>
         <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResultFromListDict.as_csv">(pykg2tbl.query.QueryResultFromListDict method)</a>
 </li>
+        <li><a href="pykg2tbl.html#pykg2tbl.QueryResult.as_csv">(pykg2tbl.QueryResult method)</a>
+</li>
       </ul></li>
   </ul></td>
 </tr></table>
@@ -68,7 +70,11 @@
       <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.build">build() (pykg2tbl.kg2tbl.KGSource static method)</a>
 
       <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.KGSource.build">(pykg2tbl.KGSource static method)</a>
+</li>
         <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult.build">(pykg2tbl.query.QueryResult static method)</a>
+</li>
+        <li><a href="pykg2tbl.html#pykg2tbl.QueryResult.build">(pykg2tbl.QueryResult static method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -103,12 +109,18 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.DefaultSparqlBuilder">DefaultSparqlBuilder (in module pykg2tbl)</a>
+</li>
       <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.detect_single_source_type">detect_single_source_type() (in module pykg2tbl.kg2tbl)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.detect_source_type">detect_source_type() (pykg2tbl.kg2tbl.KGSource static method)</a>
+
+      <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.KGSource.detect_source_type">(pykg2tbl.KGSource static method)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -133,12 +145,16 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KG2EndpointSource">KG2EndpointSource (class in pykg2tbl.kg2tbl)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGFileSource">KGFileSource (class in pykg2tbl.kg2tbl)</a>
 </li>
-      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource">KGSource (class in pykg2tbl.kg2tbl)</a>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.KGSource">KGSource (class in pykg2tbl)</a>
+
+      <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource">(class in pykg2tbl.kg2tbl)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -241,6 +257,8 @@
 </li>
         <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.query">(pykg2tbl.kg2tbl.KGSource method)</a>
 </li>
+        <li><a href="pykg2tbl.html#pykg2tbl.KGSource.query">(pykg2tbl.KGSource method)</a>
+</li>
       </ul></li>
       <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KG2EndpointSource.query_result_to_list_dicts">query_result_to_list_dicts() (pykg2tbl.kg2tbl.KG2EndpointSource static method)</a>
 
@@ -249,11 +267,17 @@
 </li>
         <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.query_result_to_list_dicts">(pykg2tbl.kg2tbl.KGSource method)</a>
 </li>
+        <li><a href="pykg2tbl.html#pykg2tbl.KGSource.query_result_to_list_dicts">(pykg2tbl.KGSource method)</a>
+</li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult">QueryResult (class in pykg2tbl.query)</a>
+      <li><a href="pykg2tbl.html#pykg2tbl.QueryResult">QueryResult (class in pykg2tbl)</a>
+
+      <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult">(class in pykg2tbl.query)</a>
 </li>
+      </ul></li>
       <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResultFromListDict">QueryResultFromListDict (class in pykg2tbl.query)</a>
 </li>
   </ul></td>
@@ -265,7 +289,11 @@
       <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.register">register() (pykg2tbl.kg2tbl.KGSource static method)</a>
 
       <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.KGSource.register">(pykg2tbl.KGSource static method)</a>
+</li>
         <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult.register">(pykg2tbl.query.QueryResult static method)</a>
+</li>
+        <li><a href="pykg2tbl.html#pykg2tbl.QueryResult.register">(pykg2tbl.QueryResult static method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -273,7 +301,11 @@
       <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.registry">registry (pykg2tbl.kg2tbl.KGSource attribute)</a>
 
       <ul>
+        <li><a href="pykg2tbl.html#pykg2tbl.KGSource.registry">(pykg2tbl.KGSource attribute)</a>
+</li>
         <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult.registry">(pykg2tbl.query.QueryResult attribute)</a>
+</li>
+        <li><a href="pykg2tbl.html#pykg2tbl.QueryResult.registry">(pykg2tbl.QueryResult attribute)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -295,11 +327,15 @@
       <ul>
         <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResultFromListDict.to_dataframe">(pykg2tbl.query.QueryResultFromListDict method)</a>
 </li>
+        <li><a href="pykg2tbl.html#pykg2tbl.QueryResult.to_dataframe">(pykg2tbl.QueryResult method)</a>
+</li>
       </ul></li>
       <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResult.to_dict">to_dict() (pykg2tbl.query.QueryResult method)</a>
 
       <ul>
         <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResultFromListDict.to_dict">(pykg2tbl.query.QueryResultFromListDict method)</a>
+</li>
+        <li><a href="pykg2tbl.html#pykg2tbl.QueryResult.to_dict">(pykg2tbl.QueryResult method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -308,6 +344,8 @@
 
       <ul>
         <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResultFromListDict.to_list">(pykg2tbl.query.QueryResultFromListDict method)</a>
+</li>
+        <li><a href="pykg2tbl.html#pykg2tbl.QueryResult.to_list">(pykg2tbl.QueryResult method)</a>
 </li>
       </ul></li>
   </ul></td>
