--- a/genindex.html
+++ b/genindex.html
@@ -85,6 +85,8 @@
       <ul>
         <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGFileSource.check_compatibility">(pykg2tbl.kg2tbl.KGFileSource static method)</a>
 </li>
+        <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGGraphSource.check_compatibility">(pykg2tbl.kg2tbl.KGGraphSource static method)</a>
+</li>
         <li><a href="pykg2tbl.html#pykg2tbl.query.QueryResultFromListDict.check_compatibility">(pykg2tbl.query.QueryResultFromListDict static method)</a>
 </li>
       </ul></li>
@@ -130,6 +132,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGGraphSource">KGGraphSource (class in pykg2tbl.kg2tbl)</a>
+</li>
       <li><a href="pykg2tbl.html#pykg2tbl.KGSource">KGSource (class in pykg2tbl)</a>
 
       <ul>
@@ -169,6 +173,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.exceptions.NoGraphSource">NoGraphSource</a>
+</li>
       <li><a href="pykg2tbl.html#pykg2tbl.exceptions.NotASubClass">NotASubClass</a>
 </li>
   </ul></td>
@@ -177,6 +183,8 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGGraphSource.parse">parse() (pykg2tbl.kg2tbl.KGGraphSource method)</a>
+</li>
       <li>
     pykg2tbl
 
@@ -216,7 +224,7 @@
       <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KG2EndpointSource.query">query() (pykg2tbl.kg2tbl.KG2EndpointSource method)</a>
 
       <ul>
-        <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGFileSource.query">(pykg2tbl.kg2tbl.KGFileSource method)</a>
+        <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGGraphSource.query">(pykg2tbl.kg2tbl.KGGraphSource method)</a>
 </li>
         <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.query">(pykg2tbl.kg2tbl.KGSource method)</a>
 </li>
@@ -226,7 +234,7 @@
       <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KG2EndpointSource.query_result_to_list_dicts">query_result_to_list_dicts() (pykg2tbl.kg2tbl.KG2EndpointSource static method)</a>
 
       <ul>
-        <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGFileSource.query_result_to_list_dicts">(pykg2tbl.kg2tbl.KGFileSource static method)</a>
+        <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGGraphSource.query_result_to_list_dicts">(pykg2tbl.kg2tbl.KGGraphSource static method)</a>
 </li>
         <li><a href="pykg2tbl.html#pykg2tbl.kg2tbl.KGSource.query_result_to_list_dicts">(pykg2tbl.kg2tbl.KGSource method)</a>
 </li>
